src/validation/tests/snapshots/rusty__validation__tests__assignment_validation_tests__bit_assignment_validation.snap
---
source: src/validation/tests/assignment_validation_tests.rs
expression: diagnostics
---
warning[E067]: Implicit downcast from 'LREAL' to 'BYTE'.
   ┌─ <internal>:29:15
   │
29 │     v_byte := v_lreal; // valid
   │               ^^^^^^^ Implicit downcast from 'LREAL' to 'BYTE'.

warning[E067]: Implicit downcast from 'REAL' to 'BYTE'.
   ┌─ <internal>:30:15
   │
30 │     v_byte := REAL#2.0; // valid
   │               ^^^^^^^^ Implicit downcast from 'REAL' to 'BYTE'.

warning[E067]: Implicit downcast from 'UDINT' to 'BYTE'.
   ┌─ <internal>:31:15
   │
31 │     v_byte := v_udint; // valid
   │               ^^^^^^^ Implicit downcast from 'UDINT' to 'BYTE'.

warning[E067]: Implicit downcast from 'UDINT' to 'BYTE'.
   ┌─ <internal>:32:15
   │
32 │     v_byte := UDINT#10; // valid
   │               ^^^^^^^^ Implicit downcast from 'UDINT' to 'BYTE'.

warning[E067]: Implicit downcast from 'DINT' to 'BYTE'.
   ┌─ <internal>:33:15
   │
33 │     v_byte := v_dint; // valid
   │               ^^^^^^ Implicit downcast from 'DINT' to 'BYTE'.

warning[E067]: Implicit downcast from 'DINT' to 'BYTE'.
   ┌─ <internal>:34:15
   │
34 │     v_byte := DINT#20; // valid
   │               ^^^^^^^ Implicit downcast from 'DINT' to 'BYTE'.

warning[E067]: Implicit downcast from 'TIME' to 'BYTE'.
   ┌─ <internal>:35:15
   │
35 │     v_byte := v_time; // valid
   │               ^^^^^^ Implicit downcast from 'TIME' to 'BYTE'.

warning[E067]: Implicit downcast from 'TIME' to 'BYTE'.
   ┌─ <internal>:36:15
   │
36 │     v_byte := TIME#10h20m30s; // valid
   │               ^^^^^^^^^^^^^^ Implicit downcast from 'TIME' to 'BYTE'.

warning[E067]: Implicit downcast from 'WORD' to 'BYTE'.
   ┌─ <internal>:37:15
   │
37 │     v_byte := v_word; // valid
   │               ^^^^^^ Implicit downcast from 'WORD' to 'BYTE'.

warning[E067]: Implicit downcast from 'WORD' to 'BYTE'.
   ┌─ <internal>:38:15
   │
38 │     v_byte := WORD#16#ffff; // valid
   │               ^^^^^^^^^^^^ Implicit downcast from 'WORD' to 'BYTE'.

error[E037]: Invalid assignment: cannot assign 'STRING' to 'BYTE'
   ┌─ <internal>:39:5
   │
39 │     v_byte := v_string; // INVALID
   │     ^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'BYTE'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'BYTE'
   ┌─ <internal>:40:5
   │
40 │     v_byte := STRING#'string'; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'BYTE'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'BYTE'
   ┌─ <internal>:41:5
   │
41 │     v_byte := 'string'; // INVALID
   │     ^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'BYTE'

error[E037]: Invalid assignment: cannot assign 'CHAR' to 'BYTE'
   ┌─ <internal>:42:5
   │
42 │     v_byte := v_char; // INVALID
   │     ^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'CHAR' to 'BYTE'

error[E037]: Invalid assignment: cannot assign 'CHAR' to 'BYTE'
   ┌─ <internal>:43:5
   │
43 │     v_byte := CHAR#'c'; // INVALID
   │     ^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'CHAR' to 'BYTE'

warning[E067]: Implicit downcast from 'TIME_OF_DAY' to 'BYTE'.
   ┌─ <internal>:44:15
   │
44 │     v_byte := v_tod; // valid
   │               ^^^^^ Implicit downcast from 'TIME_OF_DAY' to 'BYTE'.

warning[E067]: Implicit downcast from 'TIME_OF_DAY' to 'BYTE'.
   ┌─ <internal>:45:15
   │
45 │     v_byte := TOD#15:36:30; // valid
   │               ^^^^^^^^^^^^ Implicit downcast from 'TIME_OF_DAY' to 'BYTE'.

warning[E067]: Implicit downcast from 'INT' to 'BYTE'.
   ┌─ <internal>:46:15
   │
46 │     v_byte := v_ptr_int^; // valid
   │               ^^^^^^^^^^ Implicit downcast from 'INT' to 'BYTE'.

error[E037]: Invalid assignment: cannot assign 'STRING' to 'BYTE'
   ┌─ <internal>:47:5
   │
47 │     v_byte := v_ptr_string^; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'BYTE'

warning[E067]: Implicit downcast from 'INT' to 'BYTE'.
   ┌─ <internal>:48:15
   │
48 │     v_byte := v_arr_int_3[0]; // valid
   │               ^^^^^^^^^^^^^^ Implicit downcast from 'INT' to 'BYTE'.

error[E037]: Invalid assignment: cannot assign 'STRING' to 'BYTE'
   ┌─ <internal>:49:5
   │
49 │     v_byte := v_arr_string_3[0]; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'BYTE'
